feat: add brazilian portuguese language (#121)
* add brazilian portuguese

* refactor: reduce descriptions

* refactor: add end space

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script src="src/locales/en.js"></script>
   <script src="src/locales/zh.js"></script>
+  <script src="src/locales/pt-BR.js"></script>
   <script src="src/i18n.js"></script>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -268,6 +269,7 @@
           class="bg-transparent text-[10px] font-bold text-gray-400 hover:text-white transition-colors cursor-pointer outline-none py-1 px-1">
           <option value="en" class="bg-gray-800 text-white">EN</option>
           <option value="zh" class="bg-gray-800 text-white">ZH</option>
+          <option value="pt-BR" class="bg-gray-800 text-white">PT-BR</option>
         </select>
       </div>
       <button onclick="saveGameState()" id="btn-save"
