--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,7 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css"/>
+    <script src="Profile.js"></script>
 
     <style>
         body { overflow-y: auto !important; height: 100vh; }
@@ -194,16 +195,6 @@
 </section>
 
 </div>
-
-
-<script>
-async function loadSharedNavbar(){
-    const script = document.createElement('script');
-    script.src='shared/navbar.js';
-    document.head.appendChild(script);
-}
-loadSharedNavbar();
-</script>
 
 </body>
 </html>
