feat(analysis): add comprehensive progress analysis page with analytics dashboard
- Create new analysis page with play/sandbox mode switching
- Add OverviewCards component to display key performance metrics
- Add RecentProgress component to show session history and trends
- Add TrendsPanel component for visualizing performance trends over time
- Add LearningInsight component for personalized learning recommendations
- Implement ProgressAnalyzer utility for calculating performance metrics
- Implement ProgressSummaryBuilder for aggregating session data
- Implement SessionTracker for monitoring individual game sessions
- Implement SessionStore for persisting session data to localStorage
- Add AnalysisPageController to orchestrate page initialization and mode switching
- Update analysis.html with glassmorphism design and responsive layout
- Add smooth scrolling and proper viewport handling
- Disable HTML auto-closing tags in VSCode settings for consistency
- Update game.js and sandbox_game.js to integrate session tracking
- Add comprehensive README documentation for analytics module
- Provides players with detailed insights into their performance and learning progress

--- a/play.html
+++ b/play.html
@@ -915,6 +915,8 @@
   <script src="src/entities/Request.js"></script>
   <script src="src/entities/Service.js"></script>
   <script src="src/services/SoundService.js"></script>
+  <script src="analytics/SessionStore.js"></script>
+  <script src="analytics/SessionTracker.js"></script>
   <script src="src/tutorial.js"></script>
   
   <!-- Game Logic (will be modularized) -->
