--- a/dashboard.html
+++ b/dashboard.html
@@ -6,6 +6,13 @@
     <title>Dashboard - Cloud Learning Simulator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+
     <style>
         body {
             overflow-y: auto !important;
