Navbar fixing incomplete

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -14,13 +14,6 @@
   />
 
     <style>
-        body {
-            overflow-y: auto !important;
-            height: 100vh;
-        }
-        html {
-            overflow-y: auto !important;
-        }
         .glass-panel {
             background: rgba(15, 23, 42, 0.8);
             backdrop-filter: blur(12px);
@@ -50,7 +43,7 @@
         html { scrollbar-width: thin; scrollbar-color: #06b6d4 rgba(15,23,42,0.6); }
     </style>
 </head>
-<body class="bg-gray-900 text-white">
+<body class="bg-gray-900 text-white dashboard-page">
     <!-- Shared navbar will be loaded here by JavaScript -->
 
     <!-- Loading Screen -->
