--- a/shared/navbar.html
+++ b/shared/navbar.html
@@ -27,22 +27,120 @@
           <i class="fa-solid fa-gamepad mr-1"></i> Play
         </button>
 
+        <button onclick="navigateToPage('sandbox.html','sandbox')" data-page="sandbox"
+          class="nav-item px-3 py-2 rounded-md text-sm text-gray-300 hover:bg-gray-700">
+          <i class="fa-solid fa-toolbox mr-1"></i> Sandbox
+        </button>
+
         <button onclick="navigateToPage('learn.html','learn')" data-page="learn"
           class="nav-item px-3 py-2 rounded-md text-sm text-gray-300 hover:bg-gray-700">
           <i class="fa-solid fa-book-open mr-1"></i> Learn
         </button>
 
-        <button onclick="navigateToPage('play.html','sandbox')" data-page="sandbox"
+        <button onclick="navigateToPage('challenges/challenges.html','challenges')" data-page="challenges"
           class="nav-item px-3 py-2 rounded-md text-sm text-gray-300 hover:bg-gray-700">
-          <i class="fa-solid fa-toolbox mr-1"></i> Sandbox
+          <i class="fa-solid fa-question-circle mr-1"></i> Challenges
         </button>
+
+        <button onclick="navigateToPage('leaderboard/leaderboard.html','leaderboard')" data-page="leaderboard"
+          class="nav-item px-3 py-2 rounded-md text-sm text-gray-300 hover:bg-gray-700">
+          <i class="fa-solid fa-trophy mr-1"></i> Leaderboard
+        </button>
+
+        
       </div>
 
-      <!-- Mobile Button -->
-      <button onclick="toggleSharedMobileMenu()"
-        class="md:hidden text-gray-300 hover:text-white">
-        <i class="fa-solid fa-bars text-xl"></i>
-      </button>
+      <!-- Profile Section -->
+      <div class="hidden md:flex items-center">
+        <div class="relative profile-container">
+          <button 
+            id="profile-button"
+            onclick="navigateToPage('profile.html','profile')" 
+            data-page="profile"
+            class="nav-item flex items-center px-3 py-2 rounded-md text-sm text-gray-300 hover:bg-gray-700 transition-all duration-200"
+            onmouseenter="showProfileCard()"
+            onmouseleave="hideProfileCard()"
+          >
+            <div class="w-8 h-8 bg-gradient-to-r from-blue-500 to-purple-600 rounded-full flex items-center justify-center mr-2">
+              <i class="fa-solid fa-user text-white text-sm"></i>
+            </div>
+            <span id="profile-username">Player</span>
+          </button>
+
+          <!-- Profile Hover Card -->
+          <div 
+            id="profile-card" 
+            class="absolute right-0 top-full mt-2 w-64 bg-gray-800 border border-gray-600 rounded-lg shadow-xl opacity-0 invisible transition-all duration-200 z-50"
+            onmouseenter="showProfileCard()"
+            onmouseleave="hideProfileCard()"
+          >
+            <div class="p-4">
+              <!-- Profile Header -->
+              <div class="flex items-center mb-3">
+                <div class="w-12 h-12 bg-gradient-to-r from-blue-500 to-purple-600 rounded-full flex items-center justify-center mr-3">
+                  <i class="fa-solid fa-user text-white text-lg"></i>
+                </div>
+                <div>
+                  <h3 class="text-white font-semibold" id="card-username">Player</h3>
+                  <p class="text-gray-400 text-sm" id="card-level">Level 1</p>
+                </div>
+              </div>
+
+              <!-- Quick Stats -->
+              <div class="grid grid-cols-2 gap-3 mb-3">
+                <div class="text-center">
+                  <div class="text-blue-400 font-bold text-lg" id="card-score">0</div>
+                  <div class="text-gray-400 text-xs">Total Score</div>
+                </div>
+                <div class="text-center">
+                  <div class="text-green-400 font-bold text-lg" id="card-challenges">0</div>
+                  <div class="text-gray-400 text-xs">Challenges</div>
+                </div>
+              </div>
+
+              <!-- Progress Bar -->
+              <div class="mb-3">
+                <div class="flex justify-between text-xs text-gray-400 mb-1">
+                  <span>Progress</span>
+                  <span id="card-progress-text">0%</span>
+                </div>
+                <div class="w-full bg-gray-700 rounded-full h-2">
+                  <div 
+                    id="card-progress-bar" 
+                    class="bg-gradient-to-r from-blue-500 to-purple-600 h-2 rounded-full transition-all duration-300" 
+                    style="width: 0%"
+                  ></div>
+                </div>
+              </div>
+
+              <!-- Action Button -->
+              <button 
+                onclick="navigateToPage('profile.html','profile')" 
+                class="w-full bg-blue-600 hover:bg-blue-500 text-white text-sm py-2 px-3 rounded-md transition-colors duration-200"
+              >
+                View Full Profile
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Mobile Button & Profile -->
+      <div class="md:hidden flex items-center space-x-2">
+        <!-- Mobile Profile -->
+        <button onclick="navigateToPage('profile.html','profile')" data-page="profile"
+          class="nav-item flex items-center px-2 py-2 rounded-md text-sm text-gray-300 hover:bg-gray-700">
+          <div class="w-6 h-6 bg-gradient-to-r from-blue-500 to-purple-600 rounded-full flex items-center justify-center">
+            <i class="fa-solid fa-user text-white text-xs"></i>
+          </div>
+        </button>
+        
+        <!-- Mobile Menu Toggle -->
+        <button onclick="toggleSharedMobileMenu()"
+          class="text-gray-300 hover:text-white">
+          <i class="fa-solid fa-bars text-xl"></i>
+        </button>
+      </div>
     </div>
   </div>
 
@@ -67,5 +165,31 @@
       class="nav-item-mobile block w-full text-left px-3 py-2 text-gray-300 hover:bg-gray-700">
       <i class="fa-solid fa-book-open mr-2"></i> Learn
     </button>
+
+    <button onclick="navigateToPage('challenges/challenges.html','challenges')" data-page="challenges"
+      class="nav-item-mobile block w-full text-left px-3 py-2 text-gray-300 hover:bg-gray-700">
+      <i class="fa-solid fa-question-circle mr-2"></i> Challenges
+    </button>
+
+    <button onclick="navigateToPage('leaderboard/leaderboard.html','leaderboard')" data-page="leaderboard"
+      class="nav-item-mobile block w-full text-left px-3 py-2 text-gray-300 hover:bg-gray-700">
+      <i class="fa-solid fa-trophy mr-2"></i> Leaderboard
+    </button>
+
+    <button onclick="navigateToPage('sandbox.html','sandbox')" data-page="sandbox"
+      class="nav-item-mobile block w-full text-left px-3 py-2 text-gray-300 hover:bg-gray-700">
+      <i class="fa-solid fa-toolbox mr-2"></i> Sandbox
+    </button>
+
+    <!-- Mobile Profile Section -->
+    <div class="border-t border-gray-700 mt-2 pt-2">
+      <button onclick="navigateToPage('profile.html','profile')" data-page="profile"
+        class="nav-item-mobile flex items-center w-full text-left px-3 py-2 text-gray-300 hover:bg-gray-700">
+        <div class="w-6 h-6 bg-gradient-to-r from-blue-500 to-purple-600 rounded-full flex items-center justify-center mr-3">
+          <i class="fa-solid fa-user text-white text-xs"></i>
+        </div>
+        <span>Profile</span>
+      </button>
+    </div>
   </div>
 </nav>
