--- a/pages/analysis.html
+++ b/pages/analysis.html
@@ -18,13 +18,6 @@
         .trend-mixed { color: #f59e0b; }
         .trend-na { color: #6b7280; }
         
-        /* Ensure proper scrolling */
-        html, body {
-            height: 100%;
-            overflow-x: hidden;
-            overflow-y: auto;
-        }
-        
         /* Smooth scrolling */
         html {
             scroll-behavior: smooth;
@@ -37,7 +30,7 @@
         }
     </style>
 </head>
-<body class="bg-gray-900 text-white min-h-screen overflow-y-auto">
+<body class="bg-gray-900 text-white min-h-screen overflow-y-auto dashboard-page">
     <!-- Shared navbar will be loaded here -->
     <div id="navbar-container"></div>
 
