--- a/pages/profile.html
+++ b/pages/profile.html
@@ -6,12 +6,17 @@
     <title>Profile - Cloud Learning Simulator</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Font Awesome (REQUIRED for navbar icons) -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
     <link rel="stylesheet" href="style.css"/>
     <script src="Profile.js"></script>
 
     <style>
-        body { overflow-y: auto !important; height: 100vh; }
-        html { overflow-y: auto !important; }
         .card-hover:hover {
             transform: translateY(-4px);
             transition: 0.2s ease;
@@ -19,7 +24,7 @@
     </style>
 </head>
 
-<body class="bg-gradient-to-br from-gray-900 via-gray-900 to-gray-800 text-white overflow-auto">
+<body class="bg-gradient-to-br from-gray-900 via-gray-900 to-gray-800 text-white overflow-auto dashboard-page">
 
 <div class="max-w-6xl mx-auto p-6" style="padding-top:80px">
 
