--- a/shared/navbar/navbar.html
+++ b/shared/navbar/navbar.html
@@ -118,13 +118,21 @@
                 </div>
               </div>
 
-              <!-- Action Button -->
-              <button 
-                onclick="navigateToPage('/public/profile.html','profile')" 
-                class="w-full bg-blue-600 hover:bg-blue-500 text-white text-sm py-2 px-3 rounded-md transition-colors duration-200"
-              >
-                View Full Profile
-              </button>
+              <!-- Action Buttons -->
+              <div class="space-y-2">
+                <button 
+                  onclick="navigateToPage('/public/profile.html','profile')" 
+                  class="w-full bg-blue-600 hover:bg-blue-500 text-white text-sm py-2 px-3 rounded-md transition-colors duration-200"
+                >
+                  <i class="fa-solid fa-user mr-2"></i>View Full Profile
+                </button>
+                <button 
+                  onclick="handleLogout()" 
+                  class="w-full bg-red-600 hover:bg-red-500 text-white text-sm py-2 px-3 rounded-md transition-colors duration-200"
+                >
+                  <i class="fa-solid fa-sign-out-alt mr-2"></i>Logout
+                </button>
+              </div>
             </div>
           </div>
         </div>
@@ -199,6 +207,13 @@
           <i class="fa-solid fa-user text-white text-xs"></i>
         </div>
         <span>Profile</span>
+      </button>
+      <button onclick="handleLogout()"
+        class="nav-item-mobile flex items-center w-full text-left px-3 py-2 text-red-400 hover:bg-gray-700 hover:text-red-300">
+        <div class="w-6 h-6 flex items-center justify-center mr-3">
+          <i class="fa-solid fa-sign-out-alt text-red-400"></i>
+        </div>
+        <span>Logout</span>
       </button>
     </div>
   </div>
