Add unit tests for ProgressAnalyzer, LearnState, and MCQ Leaderboard logic
- Created tests for ProgressAnalyzer logic including trend calculation, budget efficiency, and objectives rate.
- Implemented LearnState tests to verify tutorial unlocking and completion logic with localStorage mock.
- Added MCQ Leaderboard tests to ensure correct sorting and ranking of attempts based on defined rules.
- Introduced package.json for project dependencies and testing setup using Vitest.

--- a/public/main.html
+++ b/public/main.html
@@ -1056,6 +1056,16 @@
   <script src="/analytics/SessionStore.js"></script>
   <script src="/analytics/SessionTracker.js"></script>
   <script src="/src/tutorial.js"></script>
+  
+  <!-- Game Managers (modular architecture) -->
+  <script src="/features/gameplay/ScoreManager.js"></script>
+  <script src="/features/gameplay/TrafficManager.js"></script>
+  <script src="/features/gameplay/ServiceManager.js"></script>
+  <script src="/features/gameplay/EventManager.js"></script>
+  <script src="/features/gameplay/GameUIManager.js"></script>
+  <script src="/features/gameplay/GameEngine.js"></script>
+  
+  <!-- Game Orchestrator -->
   <script src="/features/gameplay/game.js"></script>
 </body>
 
