--- a/public/play.html
+++ b/public/play.html
@@ -929,7 +929,15 @@
   <script src="/analytics/SessionTracker.js"></script>
   <script src="/src/tutorial.js"></script>
   
-  <!-- Game Logic (will be modularized) -->
+  <!-- Game Managers (modular architecture) -->
+  <script src="/features/gameplay/ScoreManager.js"></script>
+  <script src="/features/gameplay/TrafficManager.js"></script>
+  <script src="/features/gameplay/ServiceManager.js"></script>
+  <script src="/features/gameplay/EventManager.js"></script>
+  <script src="/features/gameplay/GameUIManager.js"></script>
+  <script src="/features/gameplay/GameEngine.js"></script>
+  
+  <!-- Game Orchestrator -->
   <script src="/features/gameplay/game.js"></script>
 
   <!-- Application Bootstrap -->
