build: Configure Vite for project structure and multi-page application

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,7 +14,7 @@
   />
 
     <!-- Shared Navbar Script -->
-    <script src="/shared/navbar/navbar.js" defer></script>
+    <script type="module" src="/shared/navbar/navbar.js"></script>
 
     <style>
         .glass-panel {
