--- a/public/profile.html
+++ b/public/profile.html
@@ -14,9 +14,9 @@
     referrerpolicy="no-referrer"
   />
     <link rel="stylesheet" href="/styles/global.css"/>
-    <script src="/Profile.js"></script>
+    <script type="module" src="/Profile.js"></script>
 
-    <script>
+    <script type="module">
         // Logout handler for profile page
         async function handleLogout() {
             try {
