--- a/public/sandbox.html
+++ b/public/sandbox.html
@@ -716,9 +716,9 @@
   </div>
 
   <!-- Load shared navbar -->
-  <script src="/shared/navbar/navbar.js"></script>
+  <script type="module" src="/shared/navbar/navbar.js"></script>
   
-  <!-- Core Scripts -->
+  <!-- Core Scripts (legacy global-based scripts) -->
   <script src="/src/config.js"></script>
   <script src="/src/state.js"></script>
   <script src="/src/entities/Request.js"></script>
