--- a/public/analysis.html
+++ b/public/analysis.html
@@ -12,7 +12,7 @@
     referrerpolicy="no-referrer"
   />
     <!-- Shared Navbar Script -->
-    <script src="/shared/navbar/navbar.js" defer></script>
+    <script type="module" src="/shared/navbar/navbar.js"></script>
     
     <link rel="stylesheet" href="/styles/global.css">
     <style>
