--- a/public/challenges.html
+++ b/public/challenges.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Shared Navbar Script -->
-    <script src="/shared/navbar/navbar.js" defer></script>
+    <script type="module" src="/shared/navbar/navbar.js"></script>
     
     <link rel="stylesheet" href="/styles/global.css">
     <style>
