--- a/public/play.html
+++ b/public/play.html
@@ -23,7 +23,7 @@
   <script src="/src/i18n.js"></script>
   
   <!-- Shared Navbar Script -->
-  <script src="/shared/navbar/navbar.js" defer></script>
+  <script type="module" src="/shared/navbar/navbar.js"></script>
   
   <!-- Styles -->
   <link rel="stylesheet" href="/styles/global.css" />
@@ -919,7 +919,7 @@
     </div>
   </div>
 
-  <!-- Core Scripts -->
+  <!-- Core Scripts (legacy global-based scripts) -->
   <script src="/src/config.js"></script>
   <script src="/src/state.js"></script>
   <script src="/src/entities/Request.js"></script>
