--- a/public/tutorial.html
+++ b/public/tutorial.html
@@ -18,7 +18,7 @@
   />
 
   <!-- Shared Navbar Loader -->
-  <script src="/shared/navbar/navbar.js" defer></script>
+  <script type="module" src="/shared/navbar/navbar.js"></script>
 
   <!-- Project Styles -->
   <link rel="stylesheet" href="/styles/global.css" />
