--- a/test-routing.html
+++ b/test-routing.html
@@ -134,10 +134,10 @@
                 '/features/leaderboard/LeaderboardPageController.js',
                 '/src/config.js',
                 '/src/state.js',
-                '/assets/sounds/game-background.mp3',
-                '/assets/sounds/menu.mp3',
-                '/assets/sounds/click-5.mp3',
-                '/assets/sounds/click-9.mp3'
+                '/sounds/game-background.mp3',
+                '/sounds/menu.mp3',
+                '/sounds/click-5.mp3',
+                '/sounds/click-9.mp3'
             ];
             
             for (const file of filesToTest) {
